# penstock

./: .pre-commit-config.yaml  CLAUDE.md  README.md  SUMMARY.md  justfile  main.py  pyproject.toml
penstock/: _config.py  _context.py  _dag.py  _decorators.py  _registry.py  _types.py
penstock/backends/: base.py  logging.py  otel.py
penstock/contrib/: celery.py  django.py  structlog.py
playground/: demo_structlog.py
tests/: test_config.py  test_contrib_celery.py  test_contrib_django.py  test_decorators.py  test_logging_backend.py  test_registry.py
