[project]
name = "penstock"
version = "0.1.0"
description = "Lightweight flow tracing and visualization for Python"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Josh Puglielli" }]
keywords = ["tracing", "observability", "dag", "flow", "correlation-id"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
otel = ["opentelemetry-api", "opentelemetry-sdk"]
structlog = ["structlog"]

[project.urls]
Repository = "https://github.com/jpuglielli/penstock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["penstock"]

[tool.hatch.build.targets.sdist]
include = ["penstock/", "LICENSE", "README.md"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["penstock", "main.py", "tests"]
