[project]
name = "penstock"
version = "0.1.0"
description = "Lightweight flow tracing and visualization for Python"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Josh Puglielli" }]
keywords = ["tracing", "observability", "dag", "flow", "correlation-id"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
otel = ["opentelemetry-api", "opentelemetry-sdk"]
structlog = ["structlog"]

[project.urls]
Repository = "https://github.com/jpuglielli/penstock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["penstock"]

[tool.hatch.build.targets.sdist]
include = ["penstock/", "LICENSE", "README.md"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["penstock", "main.py", "tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade — modernize syntax
    "I",      # isort — import sorting
    "B",      # flake8-bugbear — common bug patterns
    "C4",     # flake8-comprehensions — better comprehensions
    "SIM",    # flake8-simplify — simplifiable code
    "FA",     # flake8-future-annotations — enforce `from __future__ import annotations`
    "RET",    # flake8-return — return statement cleanup
    "PTH",    # flake8-use-pathlib — prefer pathlib over os.path
    "PERF",   # Perflint — performance anti-patterns
    "RUF",    # Ruff-specific rules
    "ARG",    # flake8-unused-arguments
    "LOG",    # flake8-logging — proper logging usage
]
ignore = [
    "ISC001", # conflicts with ruff-format
    "RET504", # unnecessary assignment before return — often clearer with the name
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]       # test fixtures often have unused args
"playground/*" = ["E501"]  # demo format strings can be long
